Solve all stub indices